# pba-content

./: .gitignore  .prettierignore  .prettierrc.cjs  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  PBA_CURRICULUM_REPORT.md  README.md  SECURITY.md  extractSyllabus.ts  index.html  package-lock.json  package.json  remove-notes.mjs  reveal-md.json  reveal.json  security-talks.md  tsconfig.json  vite.config.ts
syllabus/4-Substrate/frameless-node-template/: Cargo.toml  README.md
syllabus/4-Substrate/frameless-node-template/frameless-runtime-template/: Cargo.toml  README.md
syllabus/4-Substrate/frameless-node-template/frameless-runtime-template/src/: lib.rs
syllabus/4-Substrate/frameless-node-template/frameless-runtime/src/: lib.rs
syllabus/4-Substrate/frameless-node-template/node/: Cargo.toml
syllabus/4-Substrate/frameless-node-template/node/src/: main.rs  service.rs
syllabus/4-Substrate/frameless-node-template/runtime/: Cargo.toml
syllabus/4-Substrate/frameless-node-template/runtime-template/: Cargo.toml
syllabus/4-Substrate/frameless-node-template/runtime-template/src/: lib.rs
syllabus/4-Substrate/frameless-node-template/runtime/src/: currency.rs  lib.rs  shared.rs  staking.rs
syllabus/4-Substrate/frameless-node-template/runtime/tests/: shared.rs  wasm.rs
syllabus/5-Polkadot/5.3-Hashing_in_Polkadot/5.3-Workshops_and_Activities/proof_sizes/: Cargo.toml
syllabus/5-Substrate/frameless-node-template/node/: Cargo.toml
syllabus/5-Substrate/frameless-node-template/node/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  service.rs
syllabus/5-Substrate/frameless-node-template/runtime/: Cargo.toml
syllabus/5-Substrate/frameless-node-template/runtime/src/: lib.rs  shared.rs
syllabus/5-Substrate/frameless-node-template/runtime/tests/: grading.rs  shared.rs  wasm.rs
syllabus/6-FRAME/benchmarking-activity/substrate-node-template/node/: Cargo.toml
syllabus/7-XCM/: Cargo.toml  README.md  restructuring_notes_and_todo.txt
syllabus/7-XCM/1-Core_Concepts_of_XCM/: Core_Concepts_of_XCM_Activities.md  Core_Concepts_of_XCM_slides.md  lesson-plan.md
syllabus/7-XCM/2-XCVM/: XCVM_slides.md  lesson-plan.md
syllabus/7-XCM/2-XCVM/execution_exercises/: Cargo.toml
syllabus/7-XCM/2-XCVM/execution_exercises/src/: lib.rs
syllabus/7-XCM/3-Pallet_XCM/: Pallet_XCM_slides.md  lesson-plan.md
syllabus/7-XCM/3-Parachain_Config_in_XCM/: Parachain_Config_in_XCM_slides.md
syllabus/7-XCM/3-Writing_Sending_Executing_XCM/: Writing_Sending_Executing_XCM_slides.md  lesson-plan.md  pallet-xcm.md
syllabus/7-XCM/3-Writing_Sending_Executing_XCM/constructing-messages-with-simulator/: Cargo.toml
syllabus/7-XCM/3-Writing_Sending_Executing_XCM/constructing-messages-with-simulator/src/: lib.rs
syllabus/7-XCM/4-Chain_Config_in_XCM/: Parachain_Config_in_XCM_Activities.md  Parachain_Config_in_XCM_slides.md  lesson-plan.md
syllabus/7-XCM/4-Chain_Config_in_XCM/versioning-with-simulator/src/: lib.rs
syllabus/7-XCM/4-Testing_and_Troubleshooting_XCM/: lesson-plan.md
syllabus/7-XCM/5-XCM_in_Polkadot/: XCM_in_Polkadot_slides.md  XCM_in_polkadot.md  XCM_in_polkadot_Activities.md  XCM_in_polkadot_slides.md  lesson-plan.md
syllabus/7-XCM/5-XCM_in_Polkadot/debug-failed-xcm-message/polkadotjs/: Readme.md  package-lock.json
syllabus/7-XCM/5-XCM_in_Polkadot/debug-failed-xcm-message/subxt/: Cargo.toml  Readme.md
syllabus/7-XCM/6-XCM_Advanced_Use_Case/: slides.md
syllabus/7-XCM/7.1-Core_Concepts_of_XCM/: 7.1-Core_Concepts_of_XCM_slides.md
syllabus/7-XCM/7.1-Core_Concepts_of_XCM/7.1-Workshops_and_Activities/: 7.1-Core_Concepts_of_XCM_Activities.md
syllabus/7-XCM/7.2-Writing_Sending_Executing_XCM/: 7.2-Writing_Sending_Executing_XCM_slides.md
syllabus/7-XCM/7.2-Writing_Sending_Executing_XCM/7.1-Workshops_and_Activities/: 7.1-Core_Concepts_of_XCM_Activities.md
syllabus/7-XCM/7.2-Writing_Sending_Executing_XCM/7.2-Workshops_and_Activities/: 7.2-Writing_Sending_Executing_XCM_Activities.md  7.2-Writing_Sending_Executing_XCM_Workshop.md
syllabus/7-XCM/7.3-Parachain_Config_in_XCM/: 7.3-Parachain_Config_in_XCM_slides.md
syllabus/7-XCM/7.3-Parachain_Config_in_XCM/7.3-Workshops_and_Activities/: 7.3-Parachain_Config_in_XCM_Activities.md
syllabus/7-XCM/7.4-Testing_and_Troubleshooting_XCM/: 7.4-Testing_and_Troubleshooting_XCM.md
syllabus/7-XCM/7.4-Testing_and_Troubleshooting_XCM/7.4-Workshops_and_Activities/: 7.4-Testing_and_Troubleshooting_XCM_Workshop.md
syllabus/7-XCM/7.5-XCM_in_Polkadot/: 7.5-XCM_in_Polkadot_slides.md
syllabus/7-XCM/7.5-XCM_in_Polkadot/7.5-Workshops_and_Activities/: 7.5-XCM_in_Polkadot_Activities.md  7.5-XCM_in_Polkadot_Workshop.md
syllabus/7-XCM/Module_7_Lesson_Plans/: 7.1-Lesson_Plan_Core_Concepts_of_XCM  7.2-Lesson_Plan_Writing_Sending_Executing_XCM  7.3-Lesson_Plan_Parachain_Config_in_XCM  7.4-Lesson_Plan_Testing_and_Troubleshooting_XCM  7.5-Lesson_Plan_XCM_in_Polkadot
syllabus/7-XCM/xcm-related-code/xcm-executor/src/: lib.rs
syllabus/7-XCM/xcm-related-code/xcm-simulator-for-exercises/: Cargo.toml
syllabus/7-XCM/xcm-related-code/xcm-simulator-for-exercises/src/: lib.rs  parachain.rs  parachain_20.rs  parachain_charge_for_weight.rs  parachain_pallet_assets.rs  parachain_teleport.rs  relay_chain.rs
syllabus/8-XCM/2-XCVM/execution_exercises/: Cargo.toml
syllabus/8-XCM/2-XCVM/execution_exercises/src/: lib.rs
syllabus/8-XCM/3-Pallet_XCM/constructing-messages-with-simulator/: Cargo.toml
syllabus/8-XCM/3-Pallet_XCM/constructing-messages-with-simulator/src/: lib.rs
syllabus/8-XCM/3-Parachain_Config_in_XCM/transact-with-xcm-transactor/: Cargo.toml
syllabus/8-XCM/3-Parachain_Config_in_XCM/transact-with-xcm-transactor/src/: lib.rs
syllabus/8-XCM/3-Parachain_Config_in_XCM/versioning-with-simulator/: Cargo.toml
syllabus/8-XCM/3-Parachain_Config_in_XCM/versioning-with-simulator/src/: lib.rs  parachain.rs  relay_chain.rs
syllabus/8-XCM/xcm-related-code/xcm-simulator-for-exercises/: Cargo.toml
syllabus/8-XCM/xcm-related-code/xcm-simulator-for-exercises/src/: lib.rs  mock_msg_queue_pallet.rs  (+4 more)
syllabus/8-XCM/xcm-related-code/xcm-transactor-pallet/: Cargo.toml
(+2115 files in other folders)
