[workspace]
members = [
    "node",
    "runtime-template",
    "runtime",
]

[profile.release]
panic = "unwind"

[patch."https://github.com/paritytech/substrate"]
minimal-node = { path = "/Users/kianenigma/Desktop/Parity/substrate/bin/minimal/node" }
frame = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame" }
frame-executive = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/executive" }
frame-support = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/support" }
frame-support-procedural = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/support/procedural" }
frame-support-procedural-tools = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/support/procedural/tools" }
frame-support-procedural-tools-derive = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/support/procedural/tools/derive" }
sp-api = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/api" }
sp-api-proc-macro = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/api/proc-macro" }
sp-core = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/core" }
sp-core-hashing = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/core/hashing" }
sp-std = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/std" }
sp-debug-derive = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/debug-derive" }
sp-externalities = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/externalities" }
sp-storage = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/storage" }
sp-runtime-interface = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/runtime-interface" }
sp-runtime-interface-proc-macro = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/runtime-interface/proc-macro" }
sp-tracing = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/tracing" }
sp-wasm-interface = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/wasm-interface" }
sp-io = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/io" }
sp-keystore = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/keystore" }
sp-state-machine = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/state-machine" }
sp-panic-handler = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/panic-handler" }
sp-trie = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/trie" }
sp-runtime = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/runtime" }
sp-application-crypto = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/application-crypto" }
sp-arithmetic = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/arithmetic" }
sp-weights = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/weights" }
substrate-test-runtime-client = { path = "/Users/kianenigma/Desktop/Parity/substrate/test-utils/runtime/client" }
sc-block-builder = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/block-builder" }
sc-client-api = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/api" }
substrate-prometheus-endpoint = { path = "/Users/kianenigma/Desktop/Parity/substrate/utils/prometheus" }
sc-executor = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/executor" }
sc-executor-common = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/executor/common" }
sc-allocator = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/allocator" }
sp-maybe-compressed-blob = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/maybe-compressed-blob" }
sc-executor-wasmtime = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/executor/wasmtime" }
sc-runtime-test = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/executor/runtime-test" }
substrate-wasm-builder = { path = "/Users/kianenigma/Desktop/Parity/substrate/utils/wasm-builder" }
sp-version = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/version" }
sp-core-hashing-proc-macro = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/core/hashing/proc-macro" }
sp-version-proc-macro = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/version/proc-macro" }
sc-tracing = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/tracing" }
sc-rpc-server = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/rpc-servers" }
sc-tracing-proc-macro = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/tracing/proc-macro" }
sp-blockchain = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/blockchain" }
sp-consensus = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/consensus/common" }
sp-inherents = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/inherents" }
sp-test-primitives = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/test-primitives" }
sp-database = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/database" }
sp-rpc = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/rpc" }
substrate-test-runtime = { path = "/Users/kianenigma/Desktop/Parity/substrate/test-utils/runtime" }
frame-system = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/system" }
frame-system-rpc-runtime-api = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/system/rpc/runtime-api" }
pallet-babe = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/babe" }
frame-benchmarking = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/benchmarking" }
pallet-authorship = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/authorship" }
pallet-session = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/session" }
pallet-timestamp = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/timestamp" }
sp-timestamp = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/timestamp" }
sp-session = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/session" }
sp-staking = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/staking" }
sp-consensus-babe = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/consensus/babe" }
sp-consensus-slots = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/consensus/slots" }
frame-election-provider-support = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/election-provider-support" }
frame-election-provider-solution-type = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/election-provider-support/solution-type" }
sp-npos-elections = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/npos-elections" }
substrate-test-utils = { path = "/Users/kianenigma/Desktop/Parity/substrate/test-utils" }
substrate-test-utils-derive = { path = "/Users/kianenigma/Desktop/Parity/substrate/test-utils/derive" }
sc-service = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/service" }
sc-chain-spec = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/chain-spec" }
sc-chain-spec-derive = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/chain-spec/derive" }
sc-network = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/network" }
sc-consensus = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/consensus/common" }
sc-utils = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/utils" }
sc-network-common = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/network/common" }
sp-consensus-grandpa = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/consensus/grandpa" }
sc-network-light = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/network/light" }
sc-network-sync = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/network/sync" }
fork-tree = { path = "/Users/kianenigma/Desktop/Parity/substrate/utils/fork-tree" }
sc-telemetry = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/telemetry" }
sc-client-db = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/db" }
sc-state-db = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/state-db" }
kitchensink-runtime = { path = "/Users/kianenigma/Desktop/Parity/substrate/bin/node/runtime" }
frame-benchmarking-pallet-pov = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/benchmarking/pov" }
frame-system-benchmarking = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/system/benchmarking" }
frame-try-runtime = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/try-runtime" }
node-primitives = { path = "/Users/kianenigma/Desktop/Parity/substrate/bin/node/primitives" }
pallet-alliance = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/alliance" }
pallet-collective = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/collective" }
pallet-identity = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/identity" }
pallet-balances = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/balances" }
pallet-transaction-payment = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/transaction-payment" }
pallet-asset-conversion = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/asset-conversion" }
pallet-assets = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/assets" }
pallet-asset-rate = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/asset-rate" }
pallet-asset-tx-payment = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/transaction-payment/asset-tx-payment" }
pallet-authority-discovery = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/authority-discovery" }
sp-authority-discovery = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/authority-discovery" }
pallet-bags-list = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/bags-list" }
pallet-bounties = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/bounties" }
pallet-treasury = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/treasury" }
pallet-utility = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/utility" }
pallet-root-testing = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/root-testing" }
pallet-child-bounties = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/child-bounties" }
pallet-contracts = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/contracts" }
pallet-contracts-primitives = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/contracts/primitives" }
pallet-contracts-proc-macro = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/contracts/proc-macro" }
pallet-insecure-randomness-collective-flip = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/insecure-randomness-collective-flip" }
pallet-proxy = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/proxy" }
pallet-conviction-voting = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/conviction-voting" }
pallet-scheduler = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/scheduler" }
pallet-preimage = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/preimage" }
pallet-core-fellowship = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/core-fellowship" }
pallet-democracy = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/democracy" }
pallet-election-provider-multi-phase = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/election-provider-multi-phase" }
pallet-election-provider-support-benchmarking = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/election-provider-support/benchmarking" }
pallet-elections-phragmen = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/elections-phragmen" }
pallet-fast-unstake = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/fast-unstake" }
pallet-staking = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/staking" }
pallet-staking-reward-curve = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/staking/reward-curve" }
pallet-glutton = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/glutton" }
pallet-grandpa = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/grandpa" }
pallet-offences = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/offences" }
sp-keyring = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/keyring" }
pallet-im-online = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/im-online" }
pallet-indices = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/indices" }
pallet-lottery = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/lottery" }
frame-support-test = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/support/test" }
frame-support-test-pallet = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/support/test/pallet" }
pallet-membership = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/membership" }
pallet-message-queue = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/message-queue" }
pallet-mmr = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/merkle-mountain-range" }
sp-mmr-primitives = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/merkle-mountain-range" }
pallet-multisig = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/multisig" }
pallet-nft-fractionalization = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/nft-fractionalization" }
pallet-nfts = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/nfts" }
pallet-nfts-runtime-api = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/nfts/runtime-api" }
pallet-nis = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/nis" }
pallet-nomination-pools = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/nomination-pools" }
pallet-nomination-pools-benchmarking = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/nomination-pools/benchmarking" }
pallet-nomination-pools-runtime-api = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/nomination-pools/runtime-api" }
pallet-offences-benchmarking = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/offences/benchmarking" }
pallet-ranked-collective = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/ranked-collective" }
pallet-recovery = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/recovery" }
pallet-referenda = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/referenda" }
pallet-remark = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/remark" }
pallet-salary = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/salary" }
pallet-session-benchmarking = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/session/benchmarking" }
pallet-society = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/society" }
pallet-staking-runtime-api = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/staking/runtime-api" }
pallet-state-trie-migration = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/state-trie-migration" }
frame-remote-externalities = { path = "/Users/kianenigma/Desktop/Parity/substrate/utils/frame/remote-externalities" }
substrate-rpc-client = { path = "/Users/kianenigma/Desktop/Parity/substrate/utils/frame/rpc/client" }
sc-rpc-api = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/rpc-api" }
sc-transaction-pool-api = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/transaction-pool/api" }
substrate-state-trie-migration-rpc = { path = "/Users/kianenigma/Desktop/Parity/substrate/utils/frame/rpc/state-trie-migration-rpc" }
pallet-statement = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/statement" }
sp-statement-store = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/statement-store" }
pallet-sudo = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/sudo" }
pallet-tips = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/tips" }
pallet-transaction-payment-rpc-runtime-api = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/transaction-payment/rpc/runtime-api" }
pallet-transaction-storage = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/transaction-storage" }
sp-transaction-storage-proof = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/transaction-storage-proof" }
pallet-uniques = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/uniques" }
pallet-vesting = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/vesting" }
pallet-whitelist = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/whitelist" }
sp-block-builder = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/block-builder" }
sp-offchain = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/offchain" }
sp-transaction-pool = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/transaction-pool" }
sc-informant = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/informant" }
sc-keystore = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/keystore" }
sc-network-bitswap = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/network/bitswap" }
sc-network-transactions = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/network/transactions" }
sc-offchain = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/offchain" }
sc-transaction-pool = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/transaction-pool" }
substrate-test-runtime-transaction-pool = { path = "/Users/kianenigma/Desktop/Parity/substrate/test-utils/runtime/transaction-pool" }
sc-rpc = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/rpc" }
sc-rpc-spec-v2 = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/rpc-spec-v2" }
sc-storage-monitor = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/storage-monitor" }
sc-sysinfo = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/sysinfo" }
pallet-beefy-mmr = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/beefy-mmr" }
binary-merkle-tree = { path = "/Users/kianenigma/Desktop/Parity/substrate/utils/binary-merkle-tree" }
pallet-beefy = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/beefy" }
sp-consensus-beefy = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/consensus/beefy" }
sp-consensus-aura = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/consensus/aura" }
substrate-test-client = { path = "/Users/kianenigma/Desktop/Parity/substrate/test-utils/client" }
sp-runtime-interface-test-wasm = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/runtime-interface/test-wasm" }
sp-metadata-ir = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/metadata-ir" }
minimal-runtime = { path = "/Users/kianenigma/Desktop/Parity/substrate/bin/minimal/runtime" }
sc-basic-authorship = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/basic-authorship" }
sc-proposer-metrics = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/proposer-metrics" }
sc-cli = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/cli" }
sc-consensus-manual-seal = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/consensus/manual-seal" }
sc-consensus-aura = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/consensus/aura" }
sc-consensus-slots = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/consensus/slots" }
sc-network-test = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/network/test" }
sc-consensus-babe = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/consensus/babe" }
sc-consensus-epochs = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/consensus/epochs" }
substrate-frame-rpc-system = { path = "/Users/kianenigma/Desktop/Parity/substrate/utils/frame/rpc/system" }
substrate-build-script-utils = { path = "/Users/kianenigma/Desktop/Parity/substrate/utils/build-script-utils" }
node-template = { path = "/Users/kianenigma/Desktop/Parity/substrate/bin/node-template/node" }
frame-benchmarking-cli = { path = "/Users/kianenigma/Desktop/Parity/substrate/utils/frame/benchmarking-cli" }
node-template-runtime = { path = "/Users/kianenigma/Desktop/Parity/substrate/bin/node-template/runtime" }
pallet-aura = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/aura" }
pallet-template = { path = "/Users/kianenigma/Desktop/Parity/substrate/bin/node-template/pallets/template" }
pallet-transaction-payment-rpc = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/transaction-payment/rpc" }
sc-consensus-grandpa = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/consensus/grandpa" }
sc-network-gossip = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/network-gossip" }
sc-statement-store = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/statement-store" }
try-runtime-cli = { path = "/Users/kianenigma/Desktop/Parity/substrate/utils/frame/try-runtime/cli" }
substrate-cli-test-utils = { path = "/Users/kianenigma/Desktop/Parity/substrate/test-utils/cli" }
node-bench = { path = "/Users/kianenigma/Desktop/Parity/substrate/bin/node/bench" }
node-testing = { path = "/Users/kianenigma/Desktop/Parity/substrate/bin/node/testing" }
node-executor = { path = "/Users/kianenigma/Desktop/Parity/substrate/bin/node/executor" }
node-cli = { path = "/Users/kianenigma/Desktop/Parity/substrate/bin/node/cli" }
node-inspect = { path = "/Users/kianenigma/Desktop/Parity/substrate/bin/node/inspect" }
node-rpc = { path = "/Users/kianenigma/Desktop/Parity/substrate/bin/node/rpc" }
mmr-rpc = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/merkle-mountain-range/rpc" }
sc-consensus-babe-rpc = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/consensus/babe/rpc" }
sc-consensus-grandpa-rpc = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/consensus/grandpa/rpc" }
sc-sync-state-rpc = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/sync-state-rpc" }
sc-authority-discovery = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/authority-discovery" }
sc-network-statement = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/network/statement" }
sc-service-test = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/service/test" }
substrate-frame-cli = { path = "/Users/kianenigma/Desktop/Parity/substrate/utils/frame/frame-utilities-cli" }
chain-spec-builder = { path = "/Users/kianenigma/Desktop/Parity/substrate/bin/utils/chain-spec-builder" }
subkey = { path = "/Users/kianenigma/Desktop/Parity/substrate/bin/utils/subkey" }
sc-consensus-beefy = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/consensus/beefy" }
sc-consensus-beefy-rpc = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/consensus/beefy/rpc" }
sc-consensus-pow = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/consensus/pow" }
sp-consensus-pow = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/consensus/pow" }
mmr-gadget = { path = "/Users/kianenigma/Desktop/Parity/substrate/client/merkle-mountain-range" }
pallet-atomic-swap = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/atomic-swap" }
pallet-bags-list-fuzzer = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/bags-list/fuzzer" }
pallet-bags-list-remote-tests = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/bags-list/remote-tests" }
pallet-election-provider-e2e-test = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/election-provider-multi-phase/test-staking-e2e" }
frame-election-solution-type-fuzzer = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/election-provider-support/solution-type/fuzzer" }
pallet-examples = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/examples" }
pallet-default-config-example = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/examples/default-config" }
pallet-dev-mode = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/examples/dev-mode" }
pallet-example-basic = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/examples/basic" }
pallet-example-kitchensink = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/examples/kitchensink" }
pallet-example-offchain-worker = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/examples/offchain-worker" }
pallet-nicks = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/nicks" }
pallet-node-authorization = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/node-authorization" }
pallet-nomination-pools-fuzzer = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/nomination-pools/fuzzer" }
pallet-nomination-pools-test-staking = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/nomination-pools/test-staking" }
pallet-scored-pool = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/scored-pool" }
pallet-staking-reward-fn = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/staking/reward-fn" }
pallet-root-offences = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/root-offences" }
frame-support-test-compile-pass = { path = "/Users/kianenigma/Desktop/Parity/substrate/frame/support/test/compile_pass" }
sp-api-test = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/api/test" }
sp-application-crypto-test = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/application-crypto/test" }
sp-arithmetic-fuzzer = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/arithmetic/fuzzer" }
sp-crypto-ec-utils = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/crypto/ec-utils" }
sp-npos-elections-fuzzer = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/npos-elections/fuzzer" }
sp-runtime-interface-test = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/runtime-interface/test" }
sp-runtime-interface-test-wasm-deprecated = { path = "/Users/kianenigma/Desktop/Parity/substrate/primitives/runtime-interface/test-wasm-deprecated" }
node-template-release = { path = "/Users/kianenigma/Desktop/Parity/substrate/scripts/ci/node-template-release" }
substrate-test-utils-test-crate = { path = "/Users/kianenigma/Desktop/Parity/substrate/test-utils/test-crate" }
substrate-frame-rpc-support = { path = "/Users/kianenigma/Desktop/Parity/substrate/utils/frame/rpc/support" }
generate-bags = { path = "/Users/kianenigma/Desktop/Parity/substrate/utils/frame/generate-bags" }
node-runtime-generate-bags = { path = "/Users/kianenigma/Desktop/Parity/substrate/utils/frame/generate-bags/node-runtime" }

