[package]
name = "xcm-execution-exercise"
version = "0.9.31"
authors = ["Parity Technologies <admin@parity.io>"]
description = "XCM Message Construction and Sending Exercise"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", default-features = false, version = "3.0.0" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
xcm-simulator-for-exercises = { path = "../../xcm-related-code/xcm-simulator-for-exercises" }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37" }
xcm-simulator = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37" }
