[package]
name = "xcm-simulator-for-exercises"
version = "0.9.31"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Common xcm-simulator to use for hacking during PBA"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", default-features = false, version = "3.0.0" }
scale-info = { version = "2.1.2", features = ["derive"] }

frame-system = { git = "https://github.com/paritytech/substrate", branch = "master" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master" }

xcm = { git = "https://github.com/paritytech/polkadot", branch = "master" }
xcm-simulator = { git = "https://github.com/paritytech/polkadot", branch = "master" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "master" }
xcm-builder = { git = "https://github.com/paritytech/polkadot", branch = "master" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "master" }

[features]
default = ["std"]
std = [
	"codec/std",
    "frame-system/std",
    "frame-support/std",
    "pallet-balances/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-io/std",
	"xcm/std",
	"xcm-executor/std",
	"xcm-builder/std",
	"pallet-xcm/std",
	"polkadot-core-primitives/std",
	"polkadot-parachain/std",
]