[package]
name = "xcm-simulator-versioning-exercise"
version = "0.9.31"
authors = ["Parity Technologies <admin@parity.io>"]
description = "XCM Versioning exercise"
edition = "2021"

[dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master" }
xcm-simulator-for-exercises = { path = "../../xcm-related-code/xcm-simulator-for-exercises", features = ["with-mock-versioner"] }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "master" }
xcm-simulator = { git = "https://github.com/paritytech/polkadot", branch = "master" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "master" }

